Fix dockerfile post taskgraph update

--- a/taskcluster/docker/rust-builder/Dockerfile
+++ b/taskcluster/docker/rust-builder/Dockerfile
@@ -18,7 +18,6 @@ ENV SHELL=/bin/bash \
 
 VOLUME /builds/worker/checkouts
 VOLUME /builds/worker/target
-VOLUME /builds/worker/.cargo/registry
-VOLUME /builds/worker/.cache
+VOLUME /builds/worker/.task-cache/cargo
 
 WORKDIR /builds/worker
